  * debian-changelog-line-too-long: Be careful about joining lines that
    aren't too long in entries that do have long lines. Closes: #959496
  * debian-source-options-has-custom-compression-settings: Don't break
    on empty debian/source/options files.
  * Add fixer for binary-control-field-duplicates-source.
  * Process overrides in unused-license-paragraph-in-dep5-copyright.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 25 Apr 2020 03:28:37 +0000

lintian-brush (0.61) unstable; urgency=medium

  * Fix a bug incorrectly removing used license stanzas with license
    exceptions in debian/copyright.
  * Report when the upstream-metadata-missing-repository and upstream-
    metadata-missing-bug-tracking tags are fixed.
  * Add fixer for upstream-metadata-in-native-source.
  * Preserve @cdbs@ in debian/control.in in cdbs packages.
  * Add support for updating to Standards-Version 4.5.0 in some cases.
  * Don't create watch files for native packages.
  * Add support for parsing upstream metadata from cabal files.
  * Try to identify upstream repositories that have moved.
    Closes: #955453
  * debian-watch-file-uses-deprecated-githubredir: Don't remove watch
    files with just empty comments. Closes: #958678

 -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 24 Apr 2020 23:04:27 +0000

lintian-brush (0.60) unstable; urgency=medium

  * missing-build-dependency-for-dh_-command: Don't break on empty
    lines. Closes: #953392
  * Fix bug in detection of secure versions of Vcs-* URLs. Closes:
    #954034
  * Fix a corner case removing items from --with arguments.
  * In verbose mode, report when the fixer script made changes but they
    were not high enough certainty.
  * debian/watch: Strip leading spaces in version > 3.
  * Add gitlab.labs.nic.cz to list of GitLab hosting sites.
  * missing-build-dependency-for-dh_-command: Don't add unnecessary
    build deps.
  * List git.openstack.org as known hosting site.