@@ -1,11 +1,13 @@
 #!/usr/bin/python3
 
+import shlex
+
 from lintian_brush.control import get_debhelper_compat_version
 from lintian_brush.fixer import report_result
 from lintian_brush.rules import (
     dh_invoke_drop_argument,
     dh_invoke_drop_with,
-    update_rules,
+    RulesUpdater,
     )
 
 removed_args = []
@@ -35,7 +37,27 @@ def drop_unnecessary_args(line, target):
     return line
 
 
-update_rules(drop_unnecessary_args)
+try:
+    with RulesUpdater() as updater:
+        for rule in updater.makefile.iter_rules(b'%'):
+            for command in rule.commands():
+                if not command.startswith(b'dh'):
+                    continue
+                argv = shlex.split(command.decode())
+                if argv[0] != 'dh':
+                    continue
+                for arg in argv:
+                    if arg.startswith('--no-'):
+                        actual = ('--' + arg[len('--no-'):])
+                        if actual.encode() in unnecessary_args:
+                            unnecessary_args.remove(actual.encode())
+                    elif arg.startswith('--'):
+                        actual = ('--no-' + arg[len('--'):])
+                        if actual.encode() in unnecessary_args:
+                            unnecessary_args.remove(actual.encode())
+        updater.legacy_update(drop_unnecessary_args)
+except FileNotFoundError:
+    pass
 
 report_result(
     'Drop unnecessary dh arguments: %s' %
