@@ -1,0 +1,7 @@
+#!/usr/bin/make -f
+
+%:
+	dh $@ --no-parallel
+
+override_dh_auto_build:
+	dh_auto_build --parallel
